@@ -1,0 +1,12 @@
+2018020395 0.4633037330431069 San Jose Sharks @ Ottawa Senators
+2018020396 0.4511000481728746 Dallas Stars @ Vancouver Canucks
+2018020403 0.4650899908346973 Toronto Maple Leafs @ Minnesota Wild
+2018020397 0.5497953334294147 Detroit Red Wings @ Boston Bruins
+2018020398 0.45477475767842057 New York Rangers @ Montréal Canadiens
+2018020399 0.37689581135046224 Tampa Bay Lightning @ Florida Panthers
+2018020400 0.3984118057275569 Winnipeg Jets @ New Jersey Devils
+2018020401 0.46053976164158883 Columbus Blue Jackets @ New York Islanders
+2018020402 0.5186136274384234 Philadelphia Flyers @ Pittsburgh Penguins
+2018020405 0.5360299151337456 St. Louis Blues @ Arizona Coyotes
+2018020404 0.6206175037446231 Chicago Blackhawks @ Nashville Predators
+2018020406 0.45273793641536153 Vegas Golden Knights @ Edmonton Oilers
